--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    // CircleImageView
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
