--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.crackncrunch.amplain.fileprovider"
+            android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:permission="android.permission.MANAGE_DOCUMENTS"
             android:grantUriPermissions="true">
