--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,37 +52,48 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+
     // Support Library
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
+
     // ButterKnife
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+
     // CircleImageView
     compile 'de.hdodenhof:circleimageview:2.1.0'
+
     // Dagger 2
     compile 'com.google.dagger:dagger:2.6'
     apt 'com.google.dagger:dagger-compiler:2.6'
+
     // Retrofit 2
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-moshi:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
     // Okhttp3
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+
     // Picasso
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
     // Flow and Mortar
     compile 'com.squareup.flow:flow:1.0.0-alpha2'
     compile 'com.squareup.mortar:mortar:0.20'
+
     // RxJava and RxAndroid
     compile 'io.reactivex:rxjava:1.2.3'
     compile 'io.reactivex:rxandroid:1.2.1'
+
     // Gson
     compile 'com.google.code.gson:gson:2.4'
+
     // Stetho
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
@@ -95,4 +106,7 @@ dependencies {
 
     // Transitions backwards compatibility (for versions less than Lollipop)
     compile 'com.andkulikov:transitionseverywhere:1.7.0'
+
+    // CircleIndicator
+    compile 'me.relex:circleindicator:1.2.2@aar'
 }
